collects/tests/typed-scheme/fail/log-not-complex.rkt
#;
(exn-pred 1)
#lang typed/scheme

(ann (log 2.0) Inexact-Complex)
